2021-XX-XX version 0.10.0

- New feature: Copyright years update in the git pre-commit hook
- Update: Upgraded third party libraries to actual stable versions
- Update: Upgraded to Go 1.16.3
- Update: Improved standalone test scripts
- Fix: #124 Drop system table must be prohibited
- Fix: #125 Inserting hyphens doesn't work


2020-12-07 version 0.9.0

- New feature: SHOW TABLES statement
- New feature: DROP TABLE statement
- Fix: Various database engine stability fixes
- Fix: Multiple fixes and improvements in the database export output
- Fix: POST request returns code 201 on success
- Fix: CentOS/RHEL 8 build procedure for the Protobuf updated to produce
  static librararies


2020-10-14 version 0.8.0

- New feature: Database export functionality in the siocli
- New feature: User authentication with token
- New feature: User token management statements
- New feature: REST Server
- New feature: Use master key to encrypt individual database keys
- New feature: Database schema version
- New feature: New configuration option for limiting maximum number of databases
- New feature: New configuration option for limiting maximum number of tables
- Change: Removed configuration options for database and table cache sizes
- Fix: Database encryption key removed from table SYS_DATABASES
- Fix: Multiple stability fixes
- Build: Build instructions for Ubuntu 20.04 LTS
- Build: Build instructions for Debian 10
- Installation: Standartized locations of the 3rd party libraries
- Thirdparty: Upgrade to protobuf-3.12.3
- Thirdparty: Upgrade to ut8cpp-3.1.1


2020-06-18 version 0.7.1

- Build: Support custom locations of the 3rd party libraries


2020-06-17 version 0.7.0

- #60 Added guidelines for commit messages
- #59 Started changelog
- #55 Fixed failing tests on the CentOS 7
- #54 Fixed failing tests on the CentOS 7
- #47 Fixed CentOS 7 build
- #38 Published intial coding guidelines
- #31 Added "description" column for databases,tables, columns,
  indices, users, access keys

