@@ -337,7 +337,8 @@ void Column::readMasterColumnRecord(const ColumnDataAddress& addr, MasterColumnR
     std::uint8_t recordSizeBuffer[2];
     auto offset = addr.getOffset();
     block->readData(recordSizeBuffer, 1, offset++);
-    if (recordSizeBuffer[0] > 0x80) block->readData(recordSizeBuffer + 1, 1, offset++);
+    // Here was the bug (issue #126)
+    if (recordSizeBuffer[0] >= 0x80) block->readData(recordSizeBuffer + 1, 1, offset++);
     std::uint16_t recordSize = 0;
     ::decodeVarUInt16(recordSizeBuffer, sizeof(recordSizeBuffer), &recordSize);
 
