@@ -6,6 +6,7 @@
 - Update: Improved standalone test scripts
 - Fix: #124 Drop system table must be prohibited
 - Fix: #125 Inserting hyphens doesn't work
+- Fix: #126 code: -1007, message: Invalid column count in master column record in the table
 
 
 2020-12-07 version 0.9.0
